Bug 63560, XML content sink was not adding script element contents to the content model. Includes also minor optimizations and fixes 2 compiler warnings. r=harishd, a=vidur.